fix: docs always show scrollbar

--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -1,7 +1,6 @@
-html,
-body {
+html {
     width: 100%;
-    height: 100%;
+    overflow-y: scroll;
 }
 
 body {
